Add IFFO GUM ratio calculation

--- a/process/read_offtake.ipynb
+++ b/process/read_offtake.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_offtake = offtake_df.groupby(by = ['YearMonth', 'Province_Code', 'Brand'])['Offtake_SP_Value'].sum().reset_index()"
+    "monthly_offtake = offtake_df.groupby(by = ['YearMonth', 'Province_Code', 'Brand', 'SKU'])['Offtake_SP_Value'].sum().reset_index()"
    ]
   },
   {
@@ -147,9 +147,9 @@
    "outputs": [],
    "source": [
     "nonhq_offtake = monthly_offtake[monthly_offtake[\"Province_Code\"] != \"HQ\"]\n",
-    "non_hq_all = nonhq_offtake.groupby(by = ['YearMonth', 'Brand'])['Offtake_SP_Value'].sum().reset_index()\n",
-    "non_hq_all.columns = ['YearMonth', 'Brand', 'all_offtake']\n",
-    "nonhq_offtake_split = pd.merge(nonhq_offtake, non_hq_all, on=['YearMonth', 'Brand'], how='left')\n",
+    "non_hq_all = nonhq_offtake.groupby(by = ['YearMonth', 'Brand', 'SKU'])['Offtake_SP_Value'].sum().reset_index()\n",
+    "non_hq_all.columns = ['YearMonth', 'Brand', 'SKU', 'all_offtake']\n",
+    "nonhq_offtake_split = pd.merge(nonhq_offtake, non_hq_all, on=['YearMonth', 'Brand', 'SKU'], how='left')\n",
     "nonhq_offtake_split[\"split_ratio\"] = nonhq_offtake_split[\"Offtake_SP_Value\"] / nonhq_offtake_split['all_offtake']\n",
     "nonhq_offtake_split = nonhq_offtake_split.drop([\"Offtake_SP_Value\", 'all_offtake'],axis=1)"
    ]
@@ -163,7 +163,7 @@
     "hq_offtake = monthly_offtake[monthly_offtake[\"Province_Code\"] == \"HQ\"]\n",
     "hq_offtake = hq_offtake.drop('Province_Code',axis=1)\n",
     "\n",
-    "hq_offtake = pd.merge(hq_offtake, nonhq_offtake_split, on=['YearMonth', 'Brand'], how='left')\n",
+    "hq_offtake = pd.merge(hq_offtake, nonhq_offtake_split, on=['YearMonth', 'Brand', 'SKU'], how='left')\n",
     "hq_offtake [\"hq_split_value\"] = hq_offtake[\"Offtake_SP_Value\"] * hq_offtake[\"split_ratio\"]\n",
     "hq_offtake = hq_offtake.drop([\"Offtake_SP_Value\", 'split_ratio'],axis=1)"
    ]
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake = pd.merge(nonhq_offtake, hq_offtake, on=['YearMonth', 'Province_Code', 'Brand'], how='left')"
+    "all_offtake = pd.merge(nonhq_offtake, hq_offtake, on=['YearMonth', 'Province_Code','Brand', 'SKU'], how='left')"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati = all_offtake.groupby(by = ['YearMonth', 'Brand'])['Offtake_Value'].sum().reset_index()"
+    "all_offtake_nati = all_offtake.groupby(by = ['YearMonth', \"Brand\", 'SKU'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "all_offtake_nati[\"Province_Code\"] = \"National\"\n",
-    "all_offtake_nati = all_offtake_nati[[\"YearMonth\", \"Province_Code\", \"Brand\", \"Offtake_Value\"]]"
+    "all_offtake_nati = all_offtake_nati[[\"YearMonth\", \"Province_Code\", \"Brand\", \"SKU\", \"Offtake_Value\"]]"
    ]
   },
   {
@@ -218,7 +218,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_res = all_offtake.append(all_offtake_nati, ignore_index=True)"
+    "all_offtake_full = all_offtake.append(all_offtake_nati, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_iffo_gum(sku):\n",
+    "    if sku.endswith(\"1\") | sku.endswith(\"2\"):\n",
+    "        return 'IFFO'\n",
+    "    elif sku.endswith(\"3\") | sku.endswith(\"4\"):\n",
+    "        return \"GUM\"\n",
+    "    return ''\n",
+    "\n",
+    "all_offtake_full[\"iffo_gum\"] = all_offtake_full['SKU'].apply(\n",
+    "        lambda x: get_iffo_gum(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_offtake_brand = all_offtake_full.groupby(by = ['YearMonth', 'Province_Code', 'Brand'])['Offtake_Value'].sum().reset_index()\n",
+    "\n",
+    "all_offtake_iffo =  all_offtake_full[all_offtake_full['iffo_gum'] == \"GUM\"]\n",
+    "\n",
+    "all_offtake_iffo = all_offtake_iffo.groupby(by = ['YearMonth', 'Province_Code', 'Brand'])['Offtake_Value'].sum().reset_index()\n",
+    "\n",
+    "all_offtake_iffo.columns = ['YearMonth', 'Province_Code', 'Brand', 'iffo_offtake_value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_offtake_res = pd.merge(all_offtake_brand, all_offtake_iffo, on=['YearMonth', 'Province_Code', 'Brand'], how = 'left')\n",
+    "\n",
+    "all_offtake_res['iffo_ratio'] = all_offtake_res['iffo_offtake_value'] / all_offtake_res['Offtake_Value']"
    ]
   },
   {
@@ -258,19 +301,10 @@
     "        return 'Nutrilon'\n",
     "    elif (brand=='AC') | (brand == 'AP'):\n",
     "        return \"Aptamil\"\n",
-    "    return ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_offtake_res[\"Brand_Name\"] = all_offtake_res['Brand'].apply(\n",
-    "        lambda x: get_brand_name(x))\n",
+    "    return ''\n",
     "\n",
-    "all_offtake_res['KPI'] = 'Danone Offtake'"
+    "all_offtake_res[\"Brand_Name\"] = all_offtake_res['Brand'].apply(\n",
+    "        lambda x: get_brand_name(x))"
    ]
   },
   {
@@ -279,8 +313,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_res = all_offtake_res[['Date', 'Province_Code', 'Brand_Name', 'Brand', 'KPI', 'Offtake_Value']]\n",
-    "all_offtake_res.columns = ['Date', 'Province', 'Brand', 'SKU', 'KPI', 'KPI_Value']"
+    "danone_offtake = all_offtake_res[['Date', 'Province_Code', 'Brand_Name', 'Brand', 'Offtake_Value']].copy()\n",
+    "danone_offtake['KPI'] = 'Danone Offtake'\n",
+    "danone_offtake.columns = ['Date', 'Province', 'Brand', 'SKU', 'KPI_Value', 'KPI']\n",
+    "\n",
+    "iffo_ratio = all_offtake_res[['Date', 'Province_Code', 'Brand_Name', 'Brand', 'iffo_ratio']].copy()\n",
+    "iffo_ratio['KPI'] = 'IFFO Ratio'\n",
+    "iffo_ratio.columns = ['Date', 'Province', 'Brand', 'SKU', 'KPI_Value', 'KPI']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df = danone_offtake.append(iffo_ratio, ignore_index = True)\n",
+    "\n",
+    "output_df = output_df[['Date', 'Province', 'Brand', 'SKU', 'KPI', 'KPI_Value']]"
    ]
   },
   {
@@ -296,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_res.to_excel(\"../temp/202001-05-offtake.xlsx\", index=False)"
+    "output_df.to_excel(\"../temp/202001-05-offtake.xlsx\", index=False)"
    ]
   },
   {
@@ -359,7 +409,7 @@
     "\n",
     "nati_to_provbrand = nati_to_provbrand[[\"YearMonth\", \"Province_Code\", \"Brand\", \"Split_Ratio\"]]\n",
     "\n",
-    "nati_to_provbrand.columns =[\"YearMonth\", \"Province_Code\", \"SKU\", \"Split_Ratio\"]\n"
+    "nati_to_provbrand.columns =[\"YearMonth\", \"Province_Code\", \"SKU\", \"Split_Ratio\"]"
    ]
   },
   {
